# blog

./: .env.example  .flake8  .gitignore  README.md  db.json  pyproject.toml
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_post_image.py  0003_post_published_at.py  0004_auto_20190910_1928.py  0005_post_slug.py  0006_auto_20190910_2042.py  0007_comment_published_at.py  0008_avatar.py  0009_auto_20190913_1713.py  0010_auto_20190913_2109.py  0011_tag_image.py  0012_remove_tag_image.py  0013_auto_20191023_1808.py
sensive_blog/: settings.py  urls.py
static/css/: styles.min.css
templates/: base.html  blog-details.html  blog-sidebar.html  breadcrumbs-blog-details.html  breadcrumbs-contact.html  breadcrumbs-index.html  contact.html  index.html
